package dominio.Notificacion;

public class WhatsappAPI {

    void enviarMensaje(String numero, String mensaje) {
        // implementacion de la API
    }
}
