@startuml
'https://plantuml.com/class-diagram

package Notificaciones #back:lightgrey;line:grey;line.bold{

    enum MedioDeComunicacion{
        CORREO_ELECTRONICO
        WHATSAPP
    }
    class CorreoAPI {
        username: String
        password: String

        void enviarCorreo(to, body)
    }

    abstract class MedioDeComunicacion {
        mensajes: String
        notificarIncidentes(miembro, incidentes, comunidad): abstract void
        adaptarMensaje(incidentes, comunidad): void

    }

    class MedioCorreo extends MedioDeComunicacion{
        instance: MedioCorreo
        correoAPI: CorreoAPI

        getInstance(): MedioCorreo
        notificarIncidentes(miembro, incidentes, comunidad): void
    }

    class MedioWhatsapp extends MedioDeComunicacion {
        whatsappAPI: WhatsappAPI
        notificarIncidentes(miembro, incidentes, comunidad): void
    }

    class WhatsappAPI {
        enviarMensaje(num, message): void
    }

    MedioWhatsapp --> WhatsappAPI
    MedioCorreo-->CorreoAPI
}
@enduml